--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "bootstrap-select": "^1.13.18",
     "countdown": "^2.6.0",
     "desandro-classie": "^1.0.1",
     "formstone": "^1.4.20-1",
